[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scene/PlayerUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Farm/Objects.gd" type="Script" id=2]
[ext_resource path="res://Scene/House.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tileset/outdoor.tres" type="TileSet" id=4]
[ext_resource path="res://Tileset/Dirt_hoed.tres" type="TileSet" id=5]
[ext_resource path="res://Scene/Plants/Oak.tscn" type="PackedScene" id=6]
[ext_resource path="res://Script/Farm/FarmHandler.gd" type="Script" id=7]
[ext_resource path="res://Script/Farm/FieldHandler.gd" type="Script" id=8]
[ext_resource path="res://Script/Area/PlaceHolder.gd" type="Script" id=9]
[ext_resource path="res://Scene/Furnitures/Chest.tscn" type="PackedScene" id=10]
[ext_resource path="res://Script/Farm/Background.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 2.5 )

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="FarmHandler" type="Node"]
script = ExtResource( 7 )

[node name="FieldHandler" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="WaterZone" type="TileMap" parent="FieldHandler"]
z_index = -1
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1245218, 7, 458760, 1245219, 7, 458760, 1245220, 7, 458760, 1245221, 7, 458760, 1245222, 7, 458760, 1245223, 7, 458760, 1245224, 7, 458760, 1310754, 7, 458760, 1310755, 7, 458760, 1310756, 7, 458760, 1310757, 7, 458760, 1310758, 7, 458760, 1310759, 7, 458760, 1310760, 7, 458760, 1376290, 7, 458760, 1376291, 7, 458760, 1376292, 7, 458760, 1376293, 7, 458760, 1376294, 7, 458760, 1376295, 7, 458760, 1376296, 7, 458760, 1441826, 7, 458760, 1441827, 7, 458760, 1441828, 7, 458760, 1441829, 7, 458760, 1441830, 7, 458760, 1441831, 7, 458760, 1441832, 7, 458760, 1507362, 7, 458760, 1507363, 7, 458760, 1507364, 7, 458760, 1507365, 7, 458760, 1507366, 7, 458760, 1507367, 7, 458760, 1507368, 7, 458760 )

[node name="Background" type="TileMap" parent="FieldHandler"]
z_index = -1
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 7, 65536, 1, 7, 65536, 2, 7, 65536, 3, 7, 65536, 7, 7, 65536, 8, 7, 65536, 9, 7, 65536, 10, 7, 65536, 11, 7, 3, 12, 536870912, 0, 13, 536870912, 0, 14, 7, 3, 15, 7, 65536, 16, 7, 65536, 17, 7, 65536, 18, 7, 65536, 19, 7, 65536, 20, 7, 65536, 21, 7, 65536, 22, 7, 65536, 23, 7, 65536, 24, 7, 1, 25, 7, 65536, 26, 7, 65536, 27, 7, 1, 28, 7, 65536, 29, 7, 65536, 30, 7, 65536, 31, 7, 65536, 32, 7, 65536, 33, 7, 65536, 34, 7, 65536, 35, 7, 65536, 36, 7, 65536, 37, 7, 65536, 38, 7, 65536, 39, 7, 65536, 65547, 7, 3, 65548, 536870912, 0, 65549, 536870912, 0, 65550, 7, 3, 65555, 7, 65536, 65556, 7, 65536, 65557, 7, 2, 65558, 7, 65536, 65559, 7, 65536, 65560, 7, 65536, 65561, 7, 65536, 65562, 7, 65536, 65563, 7, 65536, 65564, 7, 65536, 65565, 7, 1, 65566, 7, 65536, 65567, 7, 65536, 65568, 7, 65536, 65569, 7, 65536, 65570, 7, 65536, 65571, 7, 65536, 65572, 7, 65536, 65573, 7, 65536, 65574, 7, 65536, 65575, 7, 65536, 131083, 7, 3, 131084, 0, 0, 131085, 536870912, 0, 131086, 7, 3, 131092, 7, 65536, 131093, 7, 65536, 131094, 7, 65536, 131095, 7, 65536, 131096, 7, 65536, 131097, 7, 2, 131098, 7, 2, 131099, 7, 65536, 131100, 7, 65536, 131101, 7, 65536, 131102, 7, 65536, 131103, 7, 65536, 131104, 7, 65536, 131105, 7, 65536, 131106, 7, 65536, 131107, 7, 65536, 131108, 7, 65536, 131109, 7, 65536, 131110, 7, 65536, 131111, 7, 65536, 196613, 7, 3, 196614, 7, 3, 196619, 7, 3, 196620, 0, 0, 196621, 0, 0, 196622, 7, 3, 196629, 7, 65536, 196630, 7, 65536, 196631, 7, 65536, 196632, 7, 65536, 196633, 7, 65536, 196634, 7, 65536, 196635, 7, 65536, 196636, 7, 65536, 196637, 7, 65536, 196638, 7, 65536, 196639, 7, 65536, 196640, 7, 65536, 196641, 7, 65536, 196642, 7, 65536, 196643, 7, 65536, 196644, 7, 65536, 196645, 7, 65536, 196646, 7, 65536, 196647, 7, 65536, 262144, 7, 3, 262145, 7, 3, 262146, 7, 3, 262147, 7, 3, 262148, 7, 3, 262149, 7, 3, 262150, 7, 3, 262151, 7, 3, 262152, 7, 3, 262153, 7, 3, 262154, 7, 3, 262155, 7, 3, 262156, 0, 0, 262157, 0, 0, 262158, 7, 3, 262159, 7, 3, 262160, 7, 3, 262161, 7, 3, 262162, 7, 3, 262163, 7, 3, 262164, 7, 3, 262165, 7, 3, 262166, 536870919, 131073, 262167, 7, 131077, 262168, -1610612729, 131072, 262169, 7, 65536, 262170, 7, 65536, 262171, 7, 65536, 262172, 7, 65536, 262173, 7, 65536, 262174, 7, 65536, 262175, 7, 65536, 262176, 7, 65536, 262177, 7, 65536, 262178, 7, 65536, 262179, 7, 65536, 262180, 7, 65536, 262181, 7, 65536, 262182, 7, 65536, 262183, 7, 65536, 327680, 0, 0, 327681, 0, 0, 327682, 6, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 536870912, 0, 327698, 536870912, 0, 327699, 0, 0, 327700, 3, 0, 327701, 0, 0, 327702, 0, 0, 327703, -1610612736, 0, 327704, 7, 196611, 327705, 7, 65536, 327706, 7, 65536, 327707, 7, 1, 327708, 7, 65536, 327709, 7, 65536, 327710, 7, 65536, 327711, 7, 65536, 327712, 7, 65536, 327713, 7, 65536, 327714, 7, 65536, 327715, 7, 65536, 327716, 7, 65536, 327717, 7, 65536, 327718, 7, 65536, 327719, 7, 65536, 393216, 2, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 6, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 2, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 7, 196611, 393241, 7, 65536, 393242, 7, 65536, 393243, 7, 65536, 393244, 7, 65536, 393245, 7, 65536, 393246, 7, 65536, 393247, 7, 65536, 393248, 7, 65536, 393249, 7, 65536, 393250, 7, 65536, 393251, 7, 65536, 393252, 7, 65536, 393253, 7, 65536, 393254, 7, 65536, 393255, 7, 65536, 458752, 0, 0, 458753, 2, 0, 458754, 0, 0, 458755, 0, 0, 458756, 3, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 3, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 7, 196611, 458777, 7, 65536, 458778, 7, 65536, 458779, 7, 65536, 458780, 7, 65536, 458781, 7, 65536, 458782, 7, 65536, 458783, 7, 65536, 458784, 7, 65536, 458785, 7, 65536, 458786, 7, 65536, 458787, 7, 65536, 458788, 7, 65536, 458789, 7, 65536, 458790, 7, 65536, 458791, 7, 65536, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 2, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 2, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 3, 0, 524312, 536870919, 131074, 524313, 536870919, 131073, 524314, 7, 131073, 524315, 536870919, 131073, 524316, 7, 131073, 524317, 536870919, 131073, 524318, 7, 131073, 524319, 536870919, 131073, 524320, 7, 131073, 524321, 536870919, 131073, 524322, 7, 131073, 524323, 536870919, 131073, 524324, 7, 131073, 524325, 536870919, 131073, 524326, 7, 131073, 524327, 536870919, 131073, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 6, 0, 589831, 0, 0, 589832, 3, 0, 589833, 3, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 3, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 2, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 5, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 3, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 6, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 5, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 655399, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 3, 0, 720909, 0, 0, 720910, 0, 0, 720911, 2, 0, 720912, 5, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 3, 0, 720919, 3, 0, 720920, 0, 0, 720921, 1, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 720935, 2, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 3, 0, 786440, 2, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 3, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 3, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 3, 0, 786470, 6, 0, 786471, 2, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 3, 0, 852005, 0, 0, 852006, 6, 0, 852007, 2, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 2, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 3, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 3, 0, 917543, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 2, 0, 983043, 0, 0, 983044, 6, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 3, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 3, 0, 983079, 0, 0, 1048576, 0, 0, 1048577, 2, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 3, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 6, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1114112, 2, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 5, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 3, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 2, 0, 1179669, 2, 0, 1179670, 2, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179687, 0, 0, 1245184, 2, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 1, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 6, 0, 1245202, 2, 0, 1245203, 2, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 3, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 7, 65544, 1245219, 7, 65545, 1245220, 7, 131083, 1245221, 7, 65545, 1245222, 7, 131083, 1245223, 7, 65545, 1245224, 7, 65546, 1310720, 0, 0, 1310721, 2, 0, 1310722, 2, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 5, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 7, 131080, 1310760, 7, 131082, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 2, 0, 1376273, 2, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 2, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 3, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 2, 0, 1376288, 2, 0, 1376289, 2, 0, 1376290, 7, 196616, 1376296, 7, 196618, 1441792, 0, 0, 1441793, 0, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 2, 0, 1441805, 0, 0, 1441806, 2, 0, 1441807, 2, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 7, 196616, 1441832, 7, 196618, 1507362, 7, 262152, 1507363, 7, 262153, 1507364, 7, 262153, 1507365, 7, 262153, 1507366, 7, 262153, 1507367, 7, 262153, 1507368, 7, 262154 )
script = ExtResource( 11 )

[node name="Cliff" type="TileMap" parent="FieldHandler/Background"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -196597, 8, 196613, -196594, 8, 65538, -131061, 8, 262149, -131058, 8, 131074, -65525, 8, 327685, -65522, 8, 196610, 4, 8, 131075, 5, 8, 196612, 6, 8, 10, 11, 8, 393221, 14, 8, 393218, 65536, 8, 458755, 65537, 8, 458756, 65538, 8, 458755, 65539, 8, 458756, 65540, 8, 196611, 65541, 8, 262148, 65542, 8, 65546, 65543, 8, 458755, 65544, 8, 458755, 65545, 8, 458755, 65546, 8, 458756, 65547, 8, 458757, 65550, 8, 458754, 65551, 8, 458755, 65552, 8, 458756, 65553, 8, 6, 65554, 8, 458758, 131072, 8, 524291, 131073, 8, 524292, 131074, 8, 524291, 131075, 8, 524292, 131076, 8, 262147, 131077, 8, 327684, 131078, 8, 65546, 131079, 8, 524291, 131080, 8, 524292, 131081, 8, 524291, 131082, 8, 524292, 131083, 8, 524293, 131086, 8, 524290, 131087, 8, 524291, 131088, 8, 524292, 131089, 8, 65542, 131090, 8, 524294, 131091, 8, 524295, 196608, 8, 589827, 196609, 8, 589828, 196610, 8, 589827, 196611, 8, 589828, 196612, 8, 327683, 196613, 8, 393220, 196614, 8, 262154, 196615, 8, 589827, 196616, 8, 589828, 196617, 8, 589827, 196618, 8, 589828, 196619, 8, 589829, 196622, 8, 589826, 196623, 8, 589827, 196624, 8, 589828, 196625, 8, 131078, 196626, 8, 589830, 196627, 8, 589831, 196628, 8, 589832, 262144, 8, 655363, 262145, 8, 655364, 262146, 8, 655363, 262147, 8, 655364, 262148, 8, 393219, 262151, 8, 655363, 262152, 8, 655364, 262153, 8, 655363, 262154, 8, 655364, 262155, 8, 655365, 262158, 8, 655362, 262159, 8, 655363, 262160, 8, 655364, 262161, 8, 196614, 262162, 8, 655366, 262163, 8, 655367, 262164, 8, 655368, 262165, 8, 655369 )

[node name="Hoed" type="TileMap" parent="FieldHandler"]
z_index = -1
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="PlaceHolder" type="Node2D" parent="FieldHandler"]
z_index = -1
script = ExtResource( 9 )

[node name="Plants" type="YSort" parent="FieldHandler"]

[node name="FarmObjects" type="YSort" parent="FieldHandler"]
script = ExtResource( 2 )

[node name="House" parent="FieldHandler/FarmObjects" instance=ExtResource( 3 )]
position = Vector2( 561, 55 )

[node name="Oak" parent="FieldHandler/FarmObjects" instance=ExtResource( 6 )]
position = Vector2( 488, 183 )

[node name="Oak2" parent="FieldHandler/FarmObjects" instance=ExtResource( 6 )]
position = Vector2( 424, 217 )

[node name="Oak3" parent="FieldHandler/FarmObjects" instance=ExtResource( 6 )]
position = Vector2( 424, 256 )

[node name="Oak4" parent="FieldHandler/FarmObjects" instance=ExtResource( 6 )]
position = Vector2( 488, 217 )

[node name="Oak5" parent="FieldHandler/FarmObjects" instance=ExtResource( 6 )]
position = Vector2( 424, 183 )

[node name="Oak6" parent="FieldHandler/FarmObjects" instance=ExtResource( 6 )]
position = Vector2( 488, 256 )

[node name="Chest" parent="FieldHandler/FarmObjects" instance=ExtResource( 10 )]
position = Vector2( 376, 80 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToHome" type="Area2D" parent="."]
position = Vector2( 571, 128 )
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToHome"]
position = Vector2( 6, -33 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="tree_entered" from="." to="." method="_on_FarmHandler_tree_entered"]
[connection signal="body_entered" from="ToHome" to="." method="_on_ToHome_body_entered"]
